<resources>
    <string name="app_name">Lista zakupów</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="title_activity_items_management">Zarzadzanie artykulami</string>

    <string name="action_settings">Settings</string>
    <string name="add">Dodaj</string>
    <string name="reload">Odśwież</string>
    <string name="save">Zapisz</string>
    <string name="delete">Usuń</string>
    <string name="settings">Ustawienia</string>
    <string name="last_update">Ostatnia aktualizacja:</string>
    <string name="remove">Remove</string>
    <string name="cancelled">Anulowano</string>
    <string name="error_during_deleting_of_list">Blad przy usuwaniu listy</string>
    <string name="delete_item_question">Usunąć artykuł?</string>
    <string name="failed_to_change_name">Zmiana nazwy nieudala sie</string>
    <string name="empty_field">Pole jest puste!</string>
    <string name="choose_action">Wybierz akcje</string>
    <string name="edit">Edytuj</string>
    <string name="article_edit">Edytuj artykul</string>
    <string name="enter_article">Wprowadz artykul</string>
    <string name="cancel">Anuluj</string>
    <string name="confirm">Zatwierdz</string>
    <string name="enable_internet_connection">Wlacz dostep do internetu aby uaktualnic wspolna liste</string>
    <string name="internet_not_connected">Brak dostepu do internetu</string>


    <array name="settings">
        <item>Wielkość kafelów listy zakupów</item>
        <item>Wielkość czcionki notatki</item>
        <item>Rodzaje artykułów</item>
    </array>

    <array name="units">
        <item>szt.</item>
        <item>g</item>
        <item>dag</item>
        <item>kg</item>
        <item>ml</item>
        <item>l</item>
    </array>
</resources>
